# platformer-server

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt  config.json  configure.bat  configure.sh  map.json  premake5.lua  server.make
premake/: premake5.lua  util.lua
src/: CMakeLists.txt  main.cpp
src/common/: assert.h  config.cpp  config.h  enum_util.h  json.cpp  json.h  log.h  ordered_hash.h  ordered_map.h  ordered_set.h  platform.h  sequence.h  time.cpp  time.h
src/core/common/: config.h  enum_util.h  json.h  ordered_hash.h  ordered_set.h  platform.h  sequence.h  time.cpp  time.h
src/core/database/: connection.cpp
src/core/game/: collision.cpp  dispatcher.h  map.h
src/core/game/system/: movement.cpp  movement.h  sync.cpp  system_base.h
src/core/network/: boost.h  handler.h  metrics.h  opcode.h  packet.cpp  packet.h  socket.cpp  socket.h  socket_handler.h  socket_listener.cpp
src/database/: connection.cpp  connection.h
src/game/: collision.cpp  collision.h  component.h  dispatcher.h  event.h  map.cpp  map.h  world.cpp  world.h
src/game/system/: movement.cpp  movement.h  session.cpp  session.h  sync.cpp  sync.h  system_base.h
src/network/: boost.h  handler.cpp  handler.h  metrics.cpp  metrics.h  opcode.h  packet.cpp  packet.h  socket.cpp  socket.h  socket_handler.h  socket_listener.cpp  socket_listener.h
src/test/: main.cpp  metrics_test.h  network_test.h  packet_handler_test.h  sequence_test.h  session_test.h  sync_test.h  world_test.h  zone_test.h
